@@ -174,7 +174,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">Projects</field>
             <field name="res_model">project.work</field>
             <field name="domain">[('type', '=', 'project')]</field>
-            <field name="context">{'type': 'project'}</field>
+            <field name="context"></field>
         </record>
         <record model="ir.action.act_window.view"
             id="act_project_form_view1">
@@ -195,7 +195,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">Tasks</field>
             <field name="res_model">project.work</field>
             <field name="domain">[('type', '=', 'task')]</field>
-            <field name="context">{'type': 'task'}</field>
+            <field name="context"></field>
         </record>
         <record model="ir.action.act_window.view"
             id="act_task_form_view1">
@@ -215,7 +215,7 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.action.act_window" id="act_open_child_work">
             <field name="name">Tasks</field>
             <field name="res_model">project.work</field>
-            <field name="context">{'type': 'task'}</field>
+            <field name="context"></field>
             <field name="domain">[('parent', '=', Eval('active_id')), ('type', '=', 'task')]</field>
         </record>
         <record model="ir.action.keyword"
