@@ -1,3 +1,5 @@
+* Remove usage of type in context
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
